[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.18",
]

[project]
name = "pipx"
description = "Install and Run Python Applications in Isolated Environments"
readme = "docs/README.md"
keywords = [
  "cli",
  "install",
  "pip",
  "Virtual Environment",
  "workflow",
]
license = "MIT"
authors = [
  { name = "Chad Smith", email = "chadsmith.software@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "argcomplete>=1.9.4",
  "colorama>=0.4.4; sys_platform=='win32'",
  "packaging>=20",
  "platformdirs>=2.1",
  "tomli; python_version<'3.11'",
  "userpath!=1.9,>=1.6",
]
urls."Bug Tracker" = "https://github.com/pypa/pipx/issues"
urls.Documentation = "https://pipx.pypa.io"
urls.Homepage = "https://pipx.pypa.io"
urls."Release Notes" = "https://pipx.pypa.io/latest/changelog/"
urls."Source Code" = "https://github.com/pypa/pipx"
scripts.pipx = "pipx.main:cli"

[tool.hatch]
build.hooks.vcs.version-file = "src/pipx/version.py"
build.targets.sdist.include = [
  "/src",
  "/logo.png",
  "/pipx_demo.gif",
  "/*.md",
]
version.source = "vcs"

[tool.ruff]
line-length = 121
src = [
  "src",
]
lint.extend-select = [
  "A",
  "B",
  "C4",
  "C9",
  "I",
  "ISC",
  "PERF",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "RSE",
  "RUF012",
  "RUF100",
  "TCH",
  "W",
]
lint.ignore = [
  "PERF203",
]
lint.isort = { known-first-party = [
  "helpers",
  "package_info",
  "pipx",
] }
lint.mccabe.max-complexity = 15

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.pdf,*.svg,.nox,testdata,.mypy_cache'
check-hidden = true
# case sensitive etc
ignore-regex = '\b(UE|path/doesnt/exist)\b'

[tool.pytest.ini_options]
minversion = "8"
log_cli_level = "INFO"
markers = [
  "all_packages: test install with maximum number of packages",
]
testpaths = [ "tests" ]
addopts = [ "-ra", "--strict-config", "--strict-markers" ]

[tool.towncrier]
directory = "changelog.d"
filename = "docs/changelog.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = [
  "",
  "",
  "",
]
title_format = "## [{version}](https://github.com/pypa/pipx/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/pypa/pipx/issues/{issue})"
package = "pipx"

[[tool.mypy.overrides]]
module = [
  "pycowsay.*",
]
ignore_missing_imports = true
