[build-system]
build-backend = "hatchling.build"
requires = [
  "docutils>=0.21",
  "hatch-vcs>=0.4",
  "hatchling>=1.27",
]

[project]
name = "pipx"
description = "Install and Run Python Applications in Isolated Environments"
readme = "docs/README.md"
keywords = [
  "cli",
  "install",
  "pip",
  "Virtual Environment",
  "workflow",
]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Chad Smith", email = "chadsmith.software@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "argcomplete>=1.9.4",
  "colorama>=0.4.4; sys_platform=='win32'",
  "filelock>=3.16",
  "packaging>=20",
  "platformdirs>=4.6",
  "tomli; python_version<'3.11'",
  "userpath>=1.6,!=1.9",
]
optional-dependencies.uv = [
  "uv>=0.9.17",
]
urls."Issue Tracker" = "https://github.com/pypa/pipx/issues"
urls."Release Notes" = "https://pipx.pypa.io/latest/changelog/"
urls."Source Code" = "https://github.com/pypa/pipx"
urls.Documentation = "https://pipx.pypa.io"
urls.Homepage = "https://pipx.pypa.io"
scripts.pipx = "pipx.main:cli"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "man" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "docutils>=0.21",
  "pypiserver[cache,passlib]>=2.3.2",
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-mock>=3.11.1",
  "pytest-subprocess>=1.5.4",
  "pytest-xdist>=3.5",
  "setuptools>=68; python_version>='3.12'",
  "watchdog>=4",
]
type = [
  "gitpython>=3.1",
  "hatchling>=1.27",
  "tomli>=2",
  "ty>=0.0.59",
  "types-docutils>=0.21",
  { include-group = "docs" },
  { include-group = "test" },
]
docs = [
  "jinja2",
  "markdown-gfm-admonition",
  "mkdocs<2",
  "mkdocs-gen-files",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "towncrier>=23.6",
]
lint = [
  "pre-commit>=3",
]
man = [
  "docutils>=0.21",
]
zipapp = [
  "shiv>=1.0.6",
]

[tool.hatch]
version.source = "vcs"
build.hooks.custom = {}
build.hooks.vcs.version-file = "src/pipx/version.py"
build.targets.wheel.shared-data = { "build/man" = "share/man/man1" }
build.targets.sdist.include = [
  "/*.md",
  "/docs/man",
  "/hatch_build.py",
  "/logo.png",
  "/pipx_demo.gif",
  "/src",
]

[tool.ruff]
line-length = 120
extend-exclude = [
  "testdata",
]
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # conflicts with formatter
  "CPY",    # no copyright header
  "D",      # ignore documentation for now
  "D203",   # `one-blank-line-before-class` and `no-blank-line-before-class` are incompatible
  "D212",   # `multi-line-summary-first-line` and `multi-line-summary-second-line` are incompatible
  "DOC201", # no restructuredtext support yet
  "DOC402", # no restructuredtext support yet
  "DOC501", # broken with sphinx docs
  "INP001", # no implicit namespaces here
  "ISC001", # conflicts with formatter
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "S104",   # possible binding to all interfaces
  "S404",   # using subprocess is alright
  "S603",   # using subprocess is alright
]
lint.per-file-ignores."src/pipx/venv.py" = [
  "A005", # module shadows the standard library
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLR0913", # too many arguments to function definition
  "PLR2004", # magic value used in comparison
  "S101",    # asserts allowed in tests
  "S603",    # subprocess call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "helpers",
  "package_info",
  "pipx",
], required-imports = [
  "from __future__ import annotations",
] }
lint.mccabe.max-complexity = 15
lint.preview = true

[tool.codespell]
# case sensitive etc
ignore-regex = "\\b(UE|path/doesnt/exist)\\b"
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = ".git,*.pdf,*.svg,.nox,testdata,.mypy_cache"
check-hidden = true

[tool.ty]
src.include = [ "hatch_build.py", "scripts", "src", "tests" ]
environment.python-version = "3.10"
rules.unused-ignore-comment = "error"

[tool.pytest]
ini_options.minversion = "8"
ini_options.testpaths = [ "tests" ]
ini_options.addopts = [ "-ra", "--strict-config", "--strict-markers" ]
ini_options.markers = [
  "all_packages: test install with maximum number of packages",
]
ini_options.log_level = "INFO"

[tool.towncrier]
package = "pipx"
directory = "changelog.d"
filename = "docs/changelog.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}](https://github.com/pypa/pipx/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/pypa/pipx/issues/{issue})"
underlines = [
  "",
  "",
  "",
]
