[metadata]
name = pipx
version = attr: pipx.version.__version__
author = Chad Smith
author_email = Chad Smith <grassfedcode@gmail.com>
description = Install and Run Python Applications in Isolated Environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pipxproject/pipx
project_urls =
    Documentation = https://pipxproject.github.io/pipx/
    Source Code = https://github.com/pipxproject/pipx
    Bug Tracker = https://github.com/pipxproject/pipx/issues
keywords = pip, install, cli, workflow, Virtual Environment
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = true
python_requires = >=3.6
install_requires =
    userpath>=1.4.1
    argcomplete>=1.9.4, <2.0
    packaging>=20.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pipx = pipx.main:cli
